Added CAAW25 papers

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 								href="https://fc25.ifca.ai/cfp.html">FC25</a>, <a
 								href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and <a
 								href="https://www2024.thewebconf.org/organization/reviewers-of-research-tracks">WWW24</a>.
-							
+
 							<br><br>
 
 							<strong><u>Full Name:</u> <span style="color:#007bff">Johnnatan Messias Peixoto
@@ -244,6 +244,95 @@
 
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													The Writing is on the Wall: Analyzing the Boom of Inscriptions and
+													its Impact on EVM-compatible Blockchains</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "krzysztof_gogol", "maria_silva", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>In Proceedings of the 4th International Workshop on Cryptoasset
+												Analytics (CAAW). 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-inscriptions"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="pdf/messias_caaw25_inscriptions.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=ek73DVCDnP8"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-inscriptions" class="collapse">
+												<p class="font-italic"><b>Abstract:</b>
+													This paper examines inscription-related transactions on Ethereum and
+													major EVM-compatible rollups, assessing their impact on scalability
+													during transaction surges. Our results show that, on certain days,
+													inscriptions accounted for
+													nearly 90% of transactions on Arbitrum and ZKsync Era, while 53%
+													on Ethereum, with 99% of these inscriptions involving meme coin
+													minting.Furthermore, we show that ZKsync and Arbitrum saw lower
+													median gas
+													fees during these surges. ZKsync Era, a ZK-rollup, showed a greater
+													fee reduction than the optimistic rollups studied—Arbitrum, Base,
+													and Optimism.
+
+												</p>
+											</div>
+										</ul>
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													A Public Dataset For the ZKsync Rollup</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["maria_silva", "johnnatan_messias", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>In Proceedings of the 4th International Workshop on Cryptoasset
+												Analytics (CAAW). 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-zksync-data"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="pdf/silva_and_messias_caaw25_zksync_data.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://github.com/matter-labs/zksync-data-dump"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-zksync-data" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Despite blockchain data being
+													publicly available, practical challenges and high costs often hinder
+													its effective use by researchers, thus limiting data-driven research
+													and exploration in the blockchain space. This is especially true
+													when it comes to Layer-2 (L2) ecosystems, and ZKsync, in particular.
+													To address these issues, we have curated a dataset from~1 year of
+													activity extracted from a ZKsync Era archive node and made it freely
+													available to external parties. We provide details on this dataset
+													and how it was created, showcase a few example analyses that can be
+													performed with it, and discuss some future research directions.
+												</p>
+											</div>
+										</ul>
 
 
 										<ul class="list-inline">
@@ -469,52 +558,7 @@
 										</ul>
 
 
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													A Public Dataset For the ZKsync Rollup</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["maria_silva", "johnnatan_messias", "benjamin_livshits"]))</script>
 
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-zksync-data"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a href="pdf/data-strategy-for-zksync.pdf"
-														target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://github.com/matter-labs/zksync-data-dump"
-														target="_blank">
-														<span class="badge badge-warning badge-pill">Data</span>
-													</a></li>
-											</ul>
-
-											<div id="arxiv-zksync-data" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Despite blockchain data being
-													publicly available, practical challenges and high costs often hinder
-													its effective use by
-													researchers, thus limiting data-driven research and exploration in
-													the blockchain space. This is especially true when it
-													comes to Layer 2 (L2) ecosystems, and ZKsync, in particular. To
-													address these issues, we have curated a dataset from 1 year of
-													activity extracted from a ZKsync Era archive node and
-													made it freely available to external parties. In this paper, we
-													provide details on this dataset and how it was created,
-													showcase a few example analyses that can be performed with it, and
-													discuss some future research directions. We also
-													publish and share the code used in our analysis on GitHub to promote
-													reproducibility and to support further research.
-
-												</p>
-											</div>
-										</ul>
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -563,61 +607,7 @@
 
 
 
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													The Writing is on the Wall: Analyzing the Boom of Inscriptions and
-													its Impact on EVM-compatible Blockchains</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "krzysztof_gogol", "maria_silva", "benjamin_livshits"]))</script>
 
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-inscriptions"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a href="https://arxiv.org/pdf/2405.15288"
-														target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-												<li class="list-inline-item"><a
-													href="https://www.youtube.com/watch?v=ek73DVCDnP8"
-													target="_blank">
-													<span class="badge badge-info badge-pill">Talk</span>
-												</a></li>
-											</ul>
-
-											<div id="arxiv-inscriptions" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Despite the level of attention
-													given to rollups there is limited empirical research about their
-													performance. To address this gap, we conduct a comprehensive
-													data-driven analysis of the late 2023 transaction boom that is
-													attributed to inscriptions: a novel approach to record data onto a
-													blockchain with no outside server needed. Inscriptions were first
-													introduced on the Bitcoin blockchain to allow for the representation
-													of NFTs or ERC-20-like tokens without smart contracts, but were
-													later spread to other blockchains.
-													This work examines the applications of inscription transactions in
-													Ethereum and its major EVM-compatible rollups and their impact on
-													blockchain scalability during periods of sudden transaction surges.
-													We found that on certain days, inscription-related transactions
-													comprised over 89% on Arbitrum, over 88% on zkSync Era, and over 53%
-													on Ethereum. Furthermore, 99% of these transactions were related to
-													the minting of meme coins, followed by limited trading activity.
-													Unlike L1 blockchains, during periods of transaction surges, zkSync
-													and Arbitrum experienced lower median gas fees, attributable to the
-													compression of L2 transactions for a single L1 batch. Additionally,
-													zkSync Era, a ZK rollup, demonstrated a stronger reduction in fees
-													than optimistic rollups considered in our study: Arbitrum, Base, and
-													Optimism.
-
-												</p>
-											</div>
-										</ul>
 
 
 
@@ -2558,7 +2548,9 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
-								<li>(2025) <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>. Ethereum Zürich. Zürich, Switzerland.
+								<li>(2025) <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the
+										Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>.
+									Ethereum Zürich. Zürich, Switzerland.
 								</li>
 
 								<li>(2024) <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
