--- a/index.html
+++ b/index.html
@@ -244,6 +244,128 @@
 
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Airdrops: Giving Money Away Is Harder Than It Seems</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-airdrop"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://arxiv.org/pdf/2312.02752.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+												<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=43B4AtYxWV4"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-airdrop" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
+													applications and platforms to attract an initial user base, and to
+													grow the user base over time. In the case of many airdrops, tokens
+													are distributed to select users as a "reward" for interacting with
+													the underlying platform, with a long-term goal of creating a loyal
+													community that will generate genuine economic activity well after
+													the airdrop has been completed. Although airdrops are widely used by
+													the blockchain industry, a proper understanding of the factors
+													contributing to an airdrop's success is generally lacking. In this
+													work, we outline the design space for airdrops, and specify a
+													reasonable list of outcomes that an airdrop should ideally result
+													in. We then analyze on-chain data from several larger-scale airdrops
+													to empirically evaluate the success of previous airdrops, with
+													respect to our desiderata. In our analysis, we demonstrate that
+													airdrop farmers frequently dispose of the lion's share of airdrops
+													proceeds via exchanges. Our analysis is followed by an overview of
+													common pitfalls that common airdrop designs lend themselves to,
+													which are then used to suggest concrete guidelines for better
+													airdrops.
+
+												</p>
+											</div>
+										</ul>
+
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Understanding Blockchain Governance: Analyzing Decentralized Voting
+													to Amend DeFi Smart Contracts</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
+
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-daos"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-daos" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Smart contracts are contractual
+													agreements between participants of a blockchain, who cannot
+													implicitly trust one another. They are software programs that run on
+													top of a blockchain, and we may need to change them from time to
+													time (e.g., to fix bugs or address new use cases). Governance
+													protocols define the means for amending or changing these smart
+													contracts without any centralized authority. They distribute instead
+													the decision-making power to every user of the smart contract: Users
+													vote on accepting or rejecting every change. The focus of this work
+													is to evaluate whether, how, and to what extent these protocols
+													ensure decentralized governance, the fundamental tenet of
+													blockchains, in practice. This evaluation is crucial as smart
+													contracts continue to transform our key, traditional, centralized
+													institutions, particularly banking and finance.
+													In this work, we review and characterize decentralized governance in
+													practice, using Compound -- one of the widely used governance
+													protocols -- as a case study. We reveal a high concentration of
+													voting power in Compound: 10 voters hold together 57.86% of the
+													voting power. Although proposals to change or amend the protocol
+													(or, essentially, the application they support) receive, on average,
+													a substantial number of votes (i.e., 89.39%) in favor, they require
+													fewer than three voters to obtain 50% or more votes. We show that
+													voting on Compound governance proposals can be unfairly expensive
+													for small token holders, and also discover voting coalitions that
+													can further marginalize these users. We plan on publishing our
+													scripts and data set on GitHub to support reproducible research.
+
+												</p>
+											</div>
+										</ul>
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -270,6 +392,11 @@
 														href="https://www.youtube.com/watch?v=ek73DVCDnP8"
 														target="_blank">
 														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
+												<li class="list-inline-item"><a
+														href="https://github.com/johnnatan-messias/research-inscriptions-boom"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
 													</a></li>
 											</ul>
 
@@ -437,125 +564,6 @@
 											</div>
 										</ul>
 
-
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Airdrops: Giving Money Away Is Harder Than It Seems</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
-
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-airdrop"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://arxiv.org/pdf/2312.02752.pdf" target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
-														target="_blank">
-														<span class="badge badge-warning badge-pill">Data</span>
-													</a></li>
-												<li class="list-inline-item"><a
-														href="https://www.youtube.com/watch?v=43B4AtYxWV4"
-														target="_blank">
-														<span class="badge badge-info badge-pill">Talk</span>
-													</a></li>
-											</ul>
-
-											<div id="arxiv-airdrop" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
-													applications and platforms to attract an initial user base, and to
-													grow the user base over time. In the case of many airdrops, tokens
-													are distributed to select users as a "reward" for interacting with
-													the underlying platform, with a long-term goal of creating a loyal
-													community that will generate genuine economic activity well after
-													the airdrop has been completed. Although airdrops are widely used by
-													the blockchain industry, a proper understanding of the factors
-													contributing to an airdrop's success is generally lacking. In this
-													work, we outline the design space for airdrops, and specify a
-													reasonable list of outcomes that an airdrop should ideally result
-													in. We then analyze on-chain data from several larger-scale airdrops
-													to empirically evaluate the success of previous airdrops, with
-													respect to our desiderata. In our analysis, we demonstrate that
-													airdrop farmers frequently dispose of the lion's share of airdrops
-													proceeds via exchanges. Our analysis is followed by an overview of
-													common pitfalls that common airdrop designs lend themselves to,
-													which are then used to suggest concrete guidelines for better
-													airdrops.
-
-												</p>
-											</div>
-										</ul>
-
-
-
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Understanding Blockchain Governance: Analyzing Decentralized Voting
-													to Amend DeFi Smart Contracts</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
-
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-daos"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
-														target="_blank">
-														<span class="badge badge-info badge-pill">Talk</span>
-													</a></li>
-											</ul>
-
-											<div id="arxiv-daos" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Smart contracts are contractual
-													agreements between participants of a blockchain, who cannot
-													implicitly trust one another. They are software programs that run on
-													top of a blockchain, and we may need to change them from time to
-													time (e.g., to fix bugs or address new use cases). Governance
-													protocols define the means for amending or changing these smart
-													contracts without any centralized authority. They distribute instead
-													the decision-making power to every user of the smart contract: Users
-													vote on accepting or rejecting every change. The focus of this work
-													is to evaluate whether, how, and to what extent these protocols
-													ensure decentralized governance, the fundamental tenet of
-													blockchains, in practice. This evaluation is crucial as smart
-													contracts continue to transform our key, traditional, centralized
-													institutions, particularly banking and finance.
-													In this work, we review and characterize decentralized governance in
-													practice, using Compound -- one of the widely used governance
-													protocols -- as a case study. We reveal a high concentration of
-													voting power in Compound: 10 voters hold together 57.86% of the
-													voting power. Although proposals to change or amend the protocol
-													(or, essentially, the application they support) receive, on average,
-													a substantial number of votes (i.e., 89.39%) in favor, they require
-													fewer than three voters to obtain 50% or more votes. We show that
-													voting on Compound governance proposals can be unfairly expensive
-													for small token holders, and also discover voting coalitions that
-													can further marginalize these users. We plan on publishing our
-													scripts and data set on GitHub to support reproducible research.
-
-												</p>
-											</div>
-										</ul>
 
 
 
@@ -2545,9 +2553,14 @@
 
 
 						<section class="resume-section experience-section mb-5">
-							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks and
+								Interviews
 							</h2>
 							<ul>
+								<li>(2025) <a href="https://www.youtube.com/watch?v=LQm1Bp27nlI">Web3 Is Broken?
+										Airdrops, UX & Ethics Explained by Research Scientist</a>.
+									Decentralized Voices.
+								</li>
 								<li>(2025) <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the
 										Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>.
 									Ethereum Zürich. Zürich, Switzerland.
@@ -2694,7 +2707,7 @@
 											class="resume-lang-name font-weight-bold">English</span> <small
 											class="text-muted font-weight-normal">(Professional)</small></li>
 									<li><span class="resume-lang-name font-weight-bold">German</span> <small
-											class="text-muted font-weight-normal">(Basic)</small></li>
+											class="text-muted font-weight-normal">(Intermediary)</small></li>
 								</ul>
 							</div>
 						</section>
