Added SBRC paper

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 			"robin_fritsch": ["Robin Fritsch", "https://disco.ethz.ch/members/rfritsch"],
 			"malte_schlosser": ["Malte Schlosser", ""],
 			"benjamin_kraner": ["Benjamin Kraner", "https://www.ifi.uzh.ch/en/bdlt/Team/PhD-Students/Benjamin-Kraner.html"],
+			"carlos_melo": ["Carlos Alexandre Silva de Melo", "https://casm3.github.io"],
+			"jose_miqueias": ["José Miqueias", "#"],
+			"glauber_goncalves": ["Glauber Dias Gonçalves", "https://sites.google.com/a/ufpi.edu.br/ggoncalves"],
+			"francisco_airton_silva": ["Francisco Airton Silva", "https://scholar.google.com/citations?user=JhN6a-wAAAAJ"],
+			"andre_soares": ["André C. B. Soares", "#"],
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -1842,6 +1847,37 @@
 											<!--//row-->
 										</div>
 										<!--//resume-timeline-item-->
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Indo além da primeira camada: Modelagem e Avaliação de Desempenho de
+													ZK-Rollups na plataforma Ethereum</h6>
+											<li>
+												<script>document.write(get_authors(["carlos_melo", "jose_miqueias", "glauber_goncalves", "francisco_airton_silva", "andre_soares", "johnnatan_messias"]))</script>
+											</li>
+											<li>In Proceedings of the 43rd Simpósio Brasileiro de redes de Computadores
+												e Sistemas Distribuídos (SBRC 2025). Natal, Brazil. Maio, 2025.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#sbrc-zkp" data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="pdf/tba" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a href="TBA" target="_blank">
+														<span class="badge badge-secondary badge-pill">BibTeX</span></a>
+												</li>
+											</ul>
+											</li>
+											<div id="sbrc-zkp" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> TBA
+												</p>
+											</div>
+										</ul>
+
+
 
 										<ul class="list-inline">
 											<li>
