--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			"claudio_tessone": ["Claudio Tessone", "https://www.ifi.uzh.ch/en/bdlt/Team/Tessone.html"],
 			"maria_silva": ["Maria Inês Silva", "https://scholar.google.com/citations?user=USCr9NMAAAAJ"],
 			"robin_fritsch": ["Robin Fritsch", "https://disco.ethz.ch/members/rfritsch"],
-			"malte_schlosser": ["Malte Schlosser", ""],
+			"malte_schlosser": ["Malte Schlosser", "#"],
 			"benjamin_kraner": ["Benjamin Kraner", "https://www.ifi.uzh.ch/en/bdlt/Team/PhD-Students/Benjamin-Kraner.html"],
 			"carlos_melo": ["Carlos Alexandre Silva de Melo", "https://casm3.github.io"],
 			"jose_miqueias": ["José Miqueias", "#"],
@@ -1856,7 +1856,7 @@
 											<li>
 												<script>document.write(get_authors(["carlos_melo", "jose_miqueias", "glauber_goncalves", "francisco_airton_silva", "andre_soares", "johnnatan_messias"]))</script>
 											</li>
-											<li>In Proceedings of the 43rd Simpósio Brasileiro de redes de Computadores
+											<li>In Proceedings of the 43rd Simpósio Brasileiro de Redes de Computadores
 												e Sistemas Distribuídos (SBRC 2025). Natal, Brazil. Maio, 2025.</li>
 
 											<ul class="list-inline">
