--- a/index.html
+++ b/index.html
@@ -1857,7 +1857,7 @@
 												<script>document.write(get_authors(["carlos_melo", "jose_miqueias", "glauber_goncalves", "francisco_airton_silva", "andre_soares", "johnnatan_messias"]))</script>
 											</li>
 											<li>In Proceedings of the 43rd Simpósio Brasileiro de Redes de Computadores
-												e Sistemas Distribuídos (SBRC 2025). Natal, Brazil. Maio, 2025.</li>
+												e Sistemas Distribuídos (SBRC 2025). Natal, Brazil. May, 2025.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#sbrc-zkp" data-toggle="collapse">
