Added slides for the papers inscriptions and zksync-data paper

--- a/index.html
+++ b/index.html
@@ -403,6 +403,10 @@
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
 													</a></li>
+												<li class="list-inline-item"><a
+														href="pdf/slides/CAAW-FC25-inscriptions.pdf" target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
 											</ul>
 
 											<div id="arxiv-inscriptions" class="collapse">
@@ -448,6 +452,10 @@
 														href="https://github.com/matter-labs/zksync-data-dump"
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+												<li class="list-inline-item"><a
+														href="pdf/slides/CAAW-FC25-data-paper.pdf" target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
 													</a></li>
 											</ul>
 
@@ -840,8 +848,8 @@
 														target="_blank">
 														<span class="badge badge-info badge-pill">Talk</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/slides/messias-sdbd-20-slides.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/slides/messias-sdbd-20-slides.pdf" target="_blank">
 														<span class="badge badge-warning badge-pill">Slides</span></a>
 												</li>
 											</ul>
