--- a/index.html
+++ b/index.html
@@ -735,6 +735,10 @@
 														target="_blank">
 														<span class="badge badge-info badge-pill">Talk</span>
 													</a></li>
+												<li class="list-inline-item"><a
+														href="pdf/slides/selfish-bitcoin-talk.pdf" target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
 											</ul>
 											</li>
 											<div id="imc-tx-prioritization" class="collapse">
