Updated branch and restructured files

--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/messias-sdbd-20.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias-sdbd-20.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -895,7 +895,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/resende_www2019_whatsapp.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/resende_www2019_whatsapp.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -951,7 +951,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/melo-icwsm-2019-demo.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/melo-icwsm-2019-demo.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1091,7 +1091,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/ribeiro_fat19_ira_ads.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/ribeiro_fat19_ira_ads.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1159,7 +1159,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/messias_wi17_inequality.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias_wi17_inequality.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1210,7 +1210,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/reis_ht17_news-sharing.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/reis_ht17_news-sharing.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1686,7 +1686,7 @@
 												<li class="list-inline-item"><a href="#mobile" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/messias_asonam16_mobile.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias_asonam16_mobile.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1744,7 +1744,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/mainack_soups16.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/mainack_soups16.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -1875,7 +1875,7 @@
 												<li class="list-inline-item"><a href="#sbrc-zkp" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/tba" target="_blank">
+												<li class="list-inline-item"><a href="pdf/papers/tba" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a href="TBA" target="_blank">
@@ -1963,7 +1963,7 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/messias_webmedia15.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias_webmedia15.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -2018,7 +2018,7 @@
 												<li class="list-inline-item"><a href="#mma" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/leandro_sbbd15.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/leandro_sbbd15.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -2055,7 +2055,7 @@
 												<li class="list-inline-item"><a href="#bazinga" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/goncalves_brasnam15.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/goncalves_brasnam15.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -2101,7 +2101,7 @@
 											</li>
 
 											<ul class="list-inline">
-												<li class="list-inline-item"><a href="pdf/messias_ctic13.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias_ctic13.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
@@ -2136,7 +2136,7 @@
 												<li class="list-inline-item"><a href="#sigamme" data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/messias-brasnam12.pdf"
+												<li class="list-inline-item"><a href="pdf/papers/messias-brasnam12.pdf"
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
